# api_manors_v1.0

./: .dockerignore  .env-example  .gitignore  Dockerfile  Readme.md  docker-compose.yml  entrypoint.sh  log.txt  pyproject.toml  redis_server.py  requirements.txt
bot/: Owners.db  __init__.py  __main__.py  bot_sync.py  bot_test.py  exceptions.py  routers.py  services.py  settings.py  webhook.py
sender/: __main__.py  exceptions.py  main-server.py  main.py  passenger_wsgi.py  requirements.txt
sender/src/: sender.py
src/: auto_db_config.py  db.sqlite3  manage.py
src/authentication/: admin.py  apps.py  forms.py  models.py  schemas.py  serializers.py  service.py  urls.py  views.py
src/authentication/migrations/: 0001_initial.py  0002_alter_baseuser_options.py  0003_telegramiduser.py  0004_alter_telegramiduser_telegram_id.py  0005_alter_telegramiduser_telegram_id.py  0006_alter_telegramiduser_telegram_id.py
src/config/: asgi.py  settings.py  urls.py  validators.py  views.py  wsgi.py
src/config/utils/: custom.py  manual_formsets.py  schemas.py
src/entertainments/: admin.py  apps.py  models.py  schemas.py  serializers.py  signals.py  urls.py  views.py
src/entertainments/migrations/: 0001_initial.py  (+1 more)
src/info/: admin.py  apps.py  models.py  schemas.py  serializers.py  signals.py  urls.py  validators.py  views.py
src/object/: admin.py  admin_filters.py  apps.py  logic.py  models.py  schemas.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
src/pages/: admin.py  apps.py  models.py  schemas.py  serializers.py  signals.py  urls.py  views.py
(+29 files in other folders)
